# logos-app

./: CLAUDE.md  README.md  flake.nix
.claude/: settings.local.json
.github/workflows/: build.yml
app/: CMakeLists.txt  main.cpp
app/ui_host/: CMakeLists.txt  macos_helpers.h  macos_helpers.mm  macos_helpers_stub.cpp  main.cpp
app/utils/: LogRedirector.cpp  LogRedirector.h  LogosBasecampPaths.h
ci/: combined.Jenkinsfile  linux.Jenkinsfile  macos.Jenkinsfile
docs/: project.md  spec.md
nix/: app.nix  appimage.nix  default.nix  macos-bundle.nix  main-ui.nix  smoke-test.nix
qt-ios/: main.cpp
scripts/: sign-and-notarize.sh
src/: CMakeLists.txt  CoreModuleManager.cpp  CoreModuleManager.h  MainContainer.cpp  MainContainer.h  MainUIBackend.cpp  MainUIBackend.h  PackageCoordinator.cpp  PackageCoordinator.h  PluginLoader.cpp  PluginLoader.h  UIPluginManager.cpp  UIPluginManager.h  main_ui_resources.qrc  mdiview.cpp  mdiview.h
src/oop/: EmbedControlChannel.cpp  EmbedControlChannel.h  HostingModeResolver.cpp  HostingModeResolver.h  OopEmbedWidget.cpp  OopEmbedWidget.h  OopPluginHost.cpp  OopPluginHost.h
src/oop/backends/: MacEmbedWidget.h  MacEmbedWidget.mm  WaylandEmbedWidget.cpp  WaylandEmbedWidget.h  WinEmbedWidget.cpp  WinEmbedWidget.h  X11EmbedWidget.cpp  X11EmbedWidget.h
src/qml/controls/: ConfirmationDialog.qml  SidebarAppDelegate.qml  qmldir
src/qml/panels/: SidebarPanel.qml  qmldir
src/qml/views/: CoreModulesView.qml  DashboardView.qml  OverlayDialogs.qml  qmldir
tests/: ui-tests.mjs
